--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -9,10 +9,21 @@
     <servlet-name>Login</servlet-name>
     <servlet-class>cn.zzu.servlet.LoginServlet</servlet-class>
   </servlet>
+  <servlet>
+    <description>This is the description of my J2EE component</description>
+    <display-name>This is the display name of my J2EE component</display-name>
+    <servlet-name>ChangePwdServlet</servlet-name>
+    <servlet-class>cn.zzu.servlet.ChangePwdServlet</servlet-class>
+  </servlet>
+
 
   <servlet-mapping>
     <servlet-name>Login</servlet-name>
     <url-pattern>/login</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>ChangePwdServlet</servlet-name>
+    <url-pattern>/changePwd</url-pattern>
   </servlet-mapping>
 
 </web-app>
